# spectrum-cockpit-os

./: .coverage  CLAUDE.md  README.md  STORAGE_DESIGN.md  advanced-task-manager-prd.md  config.example.toml  demo_project_export.json  demo_system.py  demo_tasks.db  env.example  example_usage.py  mcp-shrimp-agent-coordination.md  mcp-shrimp-analysis-report.md  mcp-shrimp-schemas.md  mcp-shrimp-task-splitting.md  mcp-shrimp-visual-documentation.md  pyproject.toml  tasks.db
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.context-portal/: project.db
prompts/: README.md  project_workflow_templates.md  task_creation_form.md  task_management_commands.md
src/: __init__.py  cli.py  config.py  main.py  server.py
src/mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  task.py  task_splitting.py
src/schemas/: splitting_schemas.py
src/services/: task_service.py  task_splitting_service.py
src/storage/: __init__.py  abstractions.py  duckdb_table.py  networkx_graph.py
tests/: __init__.py
tests/integration/: test_full_system.py  test_mcp_server.py  test_split_tools.py
tests/models/: test_task.py  test_task_splitting.py
tests/services/: test_task_splitting_service.py
tests/storage/: __init__.py  test_abstractions.py  test_duckdb_table.py  test_networkx_graph.py
